feat: Implement authorization checks and refactor controllers
I've implemented comprehensive authorization checks across multiple controllers
to address pending TODOs and enhance security.

Key changes include:

- Enhanced `AuthorizationServiceImpl` with new methods for granular permission checking (e.g., `isOrganizationAdmin`, `isSuperAdmin`, `isTailOwner`, `belongsToOrganization`).
- Refactored `OrganizationController`, `TailController`, `TailMetricsController`, `UserController`, and `N1neTokenController` to utilize `AuthorizationService` instead of relying solely on `@AuthenticationPrincipal` or broad `@PreAuthorize` annotations.
- `TailService` and `TailMetricsService` now filter data based on your organizational affiliations and specific rules for the "n1netails" organization (you see only your own data).
- `TailRepository` and `N1neTokenRepository` were updated with new query methods to support this filtered data retrieval.
- `UserController.updateUserRole` now prevents modifications to Super Admins and ensures users being promoted to Super Admin belong exclusively to the "n1netails" organization.
- The `N1neTokenController.getAll()` endpoint now allows Super Admins to view all tokens and Organization Admins to view tokens within their managed organizations.
- Ensured consistent use of `UserPrincipal` for authorization decisions throughout the affected controllers.